# NeuralNet

./: .gitignore  CMakeLists.txt  LICENSE  NeuralNetwork.cpp  NeuralNetwork.hpp  README.md  debug.hpp  main.cpp
